@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.example.myandroidnotes {
    namespace adapter {
      class com.example.myandroidnotes.adapter.MyAdapter {
          {static} + TYPE_GRID_LAYOUT : int
          {static} + TYPE_LINEAR_LAYOUT : int
          - mContext : Context
          - mLayoutInflater : LayoutInflater
          - mList : List<Notes>
          - viewType : int
          + MyAdapter()
          + getItemCount()
          + getViewType()
          + onBindViewHolder()
          + onCreateViewHolder()
          + refreshDate()
          + setViewType()
          - bindGridViewHolder()
          - bindMyViewHolder()
          - removeData()
      }
    }
  }
  

  namespace com.example.myandroidnotes {
    namespace adapter {
      class com.example.myandroidnotes.adapter.MyAdapter.MyGridViewHolder {
          ~ mTvContent : TextView
          ~ mTvTime : TextView
          ~ mTvTitle : TextView
          ~ rlContainer : ViewGroup
          + MyGridViewHolder()
      }
    }
  }
  

  namespace com.example.myandroidnotes {
    namespace adapter {
      class com.example.myandroidnotes.adapter.MyAdapter.MyViewHolder {
          ~ mTvContent : TextView
          ~ mTvTime : TextView
          ~ mTvTitle : TextView
          ~ rlContainer : ViewGroup
          + MyViewHolder()
      }
    }
  }
  

  com.example.myandroidnotes.adapter.MyAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.myandroidnotes.adapter.MyAdapter o-- com.example.myandroidnotes.NoteDbOpenHelper : mNoteDbOpenHelper
  com.example.myandroidnotes.adapter.MyAdapter +-down- com.example.myandroidnotes.adapter.MyAdapter.MyGridViewHolder
  com.example.myandroidnotes.adapter.MyAdapter +-down- com.example.myandroidnotes.adapter.MyAdapter.MyViewHolder
  com.example.myandroidnotes.adapter.MyAdapter.MyGridViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.myandroidnotes.adapter.MyAdapter.MyViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
